# cube-awq

./: .gitattributes  .gitignore  Cargo.toml  README.md
benches/: awq_kernel_gemm.rs
src/: lib.rs
src/kernel/: awq_kernel.rs  awq_kernel_gemm.rs  mod.rs
src/modules/: awq_dequantize.rs  awq_gemm.rs  mod.rs
tests/: awq_test.rs
